remove revolution slidder

--- a/LegLessFrog/app/layout/shell.html
+++ b/LegLessFrog/app/layout/shell.html
@@ -14,6 +14,6 @@
             <div class="page-splash-message page-splash-message-subtle">{{vm.busyMessage}}</div>
         </div>
 
-        <div data-ng-view class="shuffle-animation"></div>
+        <div data-ng-view class="animated fadeInDown"></div>
 
 </div>
